# nalog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  scope.md
docs/: architecture.md  detection-rules.md  environment-setup.md  format.md  performance.md  release-notes-v1.0.0.md  roadmap.md  supported-formats.md
examples/: allowlist.txt  denylist.txt
include/: analyzer.h  cli.h  parser.h  types.h  utils.h
scripts/: setup_linux.sh  setup_windows.ps1
src/: analyzer.cpp  cli.cpp  main.cpp  parser.cpp  utils.cpp
tests/: test_main.cpp
